2010-02-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the package build process for MGSim.

	* deploy/dist/mgsim-dist.mk: Only build the targets necessary for
	man page generation.

2010-01-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Clean up version handling in installer.

	This changeset makes the installer itself versioned, so that `make
	dist' can generate different installer archives over time. Also,
	it allows the user to select custom versions for the installed
	tools using flags to `configure', instead of modifying a
	configuration files.

	* deploy/installer/build-aux/bootstrap,
	* deploy/installer/build-aux/package-version: New.
	* bootstrap: Update accordingly.

	* deploy/installer/configure.ac,
	* deploy/installer/Makefile.am: Use the same versioning mechanisms
	(version.mk, version-gen) as the other members of the tool chain.

	* deploy/installer/versions.mk.defaults: Rename into...
	* deploy/installer/versions.m4: ...this. Use m4 syntax suitable
	for inclusion in `configure.ac'.

	* deploy/installer/configure.ac: Support new flags
	`--with-binutils-version', `--with-binutils-archive' etc to
	customer the installed components.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/installer/versions.mk.defaults: Bump version numbers.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the package build process for MGSim.

	* deploy/dist/mgsim-dist.mk: Require SystemC to be installed
	separately to build the package itself. This removes the
	dependency on the installer.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update top-level package after refactoring.

	* configure.ac: Acknowledge sub-package `deploy/installer'.
	* Makefile.am (EXTRA_DIST): Update file list.
	* deploy/Makefile.am: New.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation for installer.

	* deploy/README: Simplify.
	* deploy/installer/README: New.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>
